--- a/style.css
+++ b/style.css
@@ -64,7 +64,14 @@ body {
 }
 
 .note-area {
-    min-width: 50vw;
+    width: fit-content;
+    border-style: solid;
+    border-radius: 2rem;
+    border-width: 1px;
+    padding: 1rem 1rem 1rem 1rem;
+    box-shadow: inset 1px 1px 2px 2px #0000002F;
+    margin: 0.5rem 0rem 0.5rem 0rem;
+    background-color: #90b2f1;
 }
 
 .input-items {
@@ -77,7 +84,8 @@ body {
     border-radius: 1rem;
     padding: 1rem;
     margin: 1rem 0rem 1rem 0rem;
-
+    box-shadow: inset 1px 1px 2px 2px #0000002F;
+    background-color: #90b2f1;
     justify-content: center;
 }
 
@@ -89,4 +97,9 @@ body {
 .input-field {
     width: 90%;
     text-align: center;
+}
+
+.text {
+    min-width: 30vw;
+    border-radius: 1rem;
 }
